# concepts-collector-claude-plugin

./: .gitignore  .mcp.json  AGENTS.md  README.md  collections.ts  concepts.ts  package-lock.json  package.json  pyproject.toml  server.ts  start.mjs  types.ts
.claude-plugin/: plugin.json
src/concepts_collector/: server.py
